--- a/README.Rmd
+++ b/README.Rmd
@@ -63,3 +63,17 @@ summary(fit_np)
 # plot results 
 plot(fit_np, full = TRUE)
 ```
+
+
+### Parametric Estimator (without Covariates)
+
+```{r}
+fit_p1 <- did(lnavgsalary_cpi ~ oncycle, data = anzia2012,
+ 							id_subject = "district", id_time = "year",
+ 							post_treatment = c(2007, 2008, 2009),
+ 							method = "parametric",
+ 							se_boot = FALSE, select = "HQIC")
+
+
+
+
