--- a/README.Rmd
+++ b/README.Rmd
@@ -25,6 +25,6 @@ Reference
 	install_github("naoki-egami/DIDdesign", dependencies = TRUE)
 	```
 
-## Example Useage of `DIDdesign`
+## Example Usage of `DIDdesign`
 
 - You can find a detailed example in the package's website
