--- a/vignettes/articles/diddesign.Rmd
+++ b/vignettes/articles/diddesign.Rmd
@@ -31,6 +31,27 @@ data("anzia2012")
 
 ## Visualizing Data
 
+```{r}
+# original series 
+did_plot(lnavgsalary_cpi ~ oncycle, data = anzia2012,
+  post_treatment = c(2007, 2008, 2009),
+  id_subject = "district",
+  id_time = "year",
+  ylim = c(10.55, 10.8),
+  diff_order = 0,
+  main = 'Original Series'
+)
+
+# differenced series (changes-in-trend)
+did_plot(lnavgsalary_cpi ~ oncycle, data = anzia2012,
+  post_treatment = c(2007, 2008, 2009),
+  id_subject = "district",
+  id_time = "year",
+  ylim = c(-0.05, 0.05),
+  diff_order = 1,
+  main = 'Differenced Series'
+)
+```
 
 ## Nonparametric Estimator
 
