add verbose option

--- a/README.Rmd
+++ b/README.Rmd
@@ -27,5 +27,7 @@ Reference
 
 ## Example Usage
 
+- Getting started
 - [Example of analyzing panel data](./docs/articles/articles/diddesign.html)
 - Example of analyzing repeated cross-section data
+
