--- a/vignettes/articles/diddesign_rcs.Rmd
+++ b/vignettes/articles/diddesign_rcs.Rmd
@@ -17,15 +17,15 @@ knitr::opts_chunk$set(
 ```
 
 
-## Load sample data 
+## Load sample data
 
-We use data from [Malesky et al. 2014](http://doi.org/10.1017/S0003055413000580). 
+We use data from [Malesky et al. 2014](http://doi.org/10.1017/S0003055413000580).
 
 ```{r}
-# load package 
+# load package
 require(DIDdesign)
 
-# load sample data 
+# load sample data
 data("malesky2014")
 ```
 
@@ -33,14 +33,14 @@ For the detail of this dataset, please see the documentation (or `?malesky2014`)
 
 
 
-## Visualizing data 
+## Visualizing data
 
 
 We begin our analysis first by generating did plot with `did_plot()` function.
 
 ```{r}
 par(mfrow = c(1,2), mar = c(4, 2.5, 3.5, 1))
-# original series 
+# original series
 did_plot(goodroadv ~ treatment, data = malesky2014,
          post_treatment = c(2010),
          id_time = "year",
@@ -60,7 +60,7 @@ did_plot(goodroadv ~ treatment, data = malesky2014,
 ```
 
 
-## Estimating treatment effects 
+## Estimating treatment effects
 
 
 
@@ -71,7 +71,8 @@ fit_p0 <- did(goodroadv ~ treatment, data = malesky2014,
               id_time = "year",
               method = 'parametric')
 
-fit_p1 <- did(goodroadv ~ treatment | lnarea + lnpopden + city + as.factor(reg8), 
+fit_p1 <- did(goodroadv ~ treatment |
+  lnarea + lnpopden + as.factor(city) + as.factor(reg8),
               data = malesky2014,
               post_treatment = c(2010),
               id_time = "year",
@@ -83,9 +84,9 @@ fit_p1 <- did(goodroadv ~ treatment | lnarea + lnpopden + city + as.factor(reg8)
 ```{r}
 # plot function
 par(mfrow = c(1,2), mar = c(4, 2.5, 3.5, 1))
-plot(fit_p0, full = TRUE, ylim = c(-0.05, 0.35), main = "Without Covariates")
+plot(fit_p0, full = TRUE, selection = FALSE, ylim = c(0, 0.3), main = "Without Covariates")
 abline(h = 0, col = 'gray', lwd = 1.5, lty = 3)
-plot(fit_p1, full = TRUE, ylim = c(-0.05, 0.35), main = 'With Covariates')
+plot(fit_p1, full = TRUE, selection = FALSE, ylim = c(0, 0.3), main = 'With Covariates')
 abline(h = 0, col = 'gray', lwd = 1.5, lty = 3)
 ```
 
@@ -98,14 +99,14 @@ summary(fit_p1, full = TRUE)
 ```
 
 
-## Assessing model selection 
+## Assessing model selection
 
 
 ```{r}
 par(mfrow = c(1,2), mar = c(4, 2.5, 3.5, 1))
-did_plot_selection(fit_p0, equivalence = FALSE, 
+did_plot_selection(fit_p0, equivalence = FALSE,
   ylim = c(-0.2, 0.05), main = "Without Covariates")
-did_plot_selection(fit_p1, equivalence = FALSE, 
+did_plot_selection(fit_p1, equivalence = FALSE,
   ylim = c(-0.2, 0.05), main = "With Covariates")
 
 ```
