Update RCS example

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ Authors:
 
 Reference:
 
-- Egami and Yamauchi (2019) "How to Improve the Difference-in-Differences Design with Multiple Pre-treatment Periods."
+- Egami and Yamauchi (2019) "Using Multiple Pre-treatment Periods to Improve Difference-in-Differences and Staggered Adoption Designs."
 
 ## Installation Instructions:
 
@@ -48,9 +48,9 @@ Reference:
 ## The Standard Difference-in-Differences Design
 
 
+
+
 ### Panel Data
-
-
 
 
 ```{r, message=FALSE,warning=FALSE}
@@ -110,18 +110,31 @@ summary(fit_panel)
 
 ### Repeated Cross-sectional Data
 
-```{r, rcs, eval=FALSE}
+Sometimes, each period consists of different units, instead of repeated observations of the same units.
+`did()` can handle such "repeated cross-sectional" data by setting `is_panel = FALSE`.
+As an example, we analyze `malesky2014` dataset (see `?malesky2014` for more details on this dataset).
+
+```{r, rcs, eval=TRUE}
+## load data
 data(malesky2014)
 
+## estimate ATT
 set.seed(1234)
 ff_rcs <- did(
- formula = transport ~ treatment + post_treat | factor(city),
- data    = malesky2014,
- id_time = 'year',
- is_panel= FALSE,
- option  = list(n_boot = 20, parallel = TRUE, id_cluster = "tinh", lead = 0)
+  formula = transport ~ treatment + post_treat | factor(city),
+  data    = malesky2014,
+  id_time = 'year',
+  is_panel= FALSE,
+  option  = list(n_boot = 20, parallel = FALSE, id_cluster = "tinh", lead = 0)
 )
+```
 
+
+- `formula` now includes `treatment` variable as well as the post-treatment time indicator.
+- `id_cluster`: A variable used to cluster the standard errors.
+
+
+```{r rcs_summary}
 summary(ff_rcs)
 ```
 
@@ -139,7 +152,7 @@ require(tibble)
 ## format dataset
 paglayan2019 <- paglayan2019 %>%
 	filter(!(state %in% c("WI", "DC"))) %>%
-	mutate(id_time = year,
+  mutate(id_time = year,
          id_subject = as.numeric(as.factor(state)),
          log_expenditure = log(pupil_expenditure + 1),
          log_salary      = log(teacher_salary + 1))
