Fix typo in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -85,7 +85,7 @@ fit_panel <- did(
 - `formula`: A formula specifying variables. It should follow the form of `outcome ~ treatment | covariates`.
    - `treatment` should be time-varying, that is, `treatment` takes zero for everyone before the treatment assignment, and takes 1 for units who are treated. See the example for how the treatment variable should be coded.
    - `covariates` can be omitted as `outcome ~ treatment`.
-- `data`: A data frame. This can be either `data.frame` or `tibble`/
+- `data`: A data frame. This can be either `data.frame` or `tibble`.
 - `id_unit`: A variable name in the data that uniquely identifies units (e.g., individuals or states).
 - `id_time`: A variable name in the data that uniquely identifies time (e.g., year).
 - `design`: Design option. It should be `"did"` when the standard DID design is used.
