--- a/README.Rmd
+++ b/README.Rmd
@@ -220,8 +220,6 @@ summary(fit_sa)
 
 
 ```{r echo=FALSE, out.width="100%", dpi=250}
-require(ggplot2)
-
 plot_dat <- as_tibble(summary(fit_sa)) %>% filter(estimator == "SA-Double-DID")
 plot(plot_dat$lead, plot_dat$estimate, pch = 16,
      xlab = "Time", ylab = "SA-ATT", main = "Double DID Estimates",
@@ -229,7 +227,7 @@ plot(plot_dat$lead, plot_dat$estimate, pch = 16,
    )
 axis(1, at = plot_dat$lead, labels = paste0("t=", plot_dat$lead))
 for (i in 1:nrow(plot_dat)) {
-  lines(c(i,i),
+  lines(c(plot_dat$lead[i], plot_dat$lead[i]),
         c(plot_dat$estimate[i] - 1.96 * plot_dat$std.error[i],
           plot_dat$estimate[i] + 1.96 * plot_dat$std.error[i]))
 }
