--- a/README.Rmd
+++ b/README.Rmd
@@ -205,7 +205,7 @@ fit_sa <- did(
   id_unit = "id_subject",
   id_time = "id_time",
   design  = "sa",
-  option  = list(n_boot = 200, lead = 0:5, thres = 2, parallel = TRUE)
+  option  = list(n_boot = 200, lead = 0:9, thres = 2, parallel = TRUE)
 )
 ```
 
@@ -215,21 +215,28 @@ In addition to options described in the previous section, there is one additiona
 
 
 ```{r sa_summary}
-summary(fit_sa)
+head(summary(fit_sa))
 ```
 
 
 ```{r echo=FALSE, out.width="100%", dpi=250}
-plot_dat <- as_tibble(summary(fit_sa)) %>% filter(estimator == "SA-Double-DID")
-plot(plot_dat$lead, plot_dat$estimate, pch = 16,
+## plot data   
+plot_dat <- as_tibble(summary(fit_sa)) %>%
+  filter(estimator == "SA-Double-DID") %>%
+  mutate(CI90_UB = estimate + qnorm(0.95) * std.error,
+         CI90_LB = estimate - qnorm(0.95) * std.error)
+
+## plot
+par(mar = c(3.8, 4, 3, 1), pty = 's')
+plot(plot_dat$lead, plot_dat$estimate, type = 'o', pch = 16,
      xlab = "Time", ylab = "SA-ATT", main = "Double DID Estimates",
      xaxt = "n", ylim = c(-0.1, 0.1), las = 1
    )
-abline(h = 0, col = 'red', lty = 3, lwd = 1.5)
-axis(1, at = plot_dat$lead, labels = paste0("t=", plot_dat$lead))
-for (i in 1:nrow(plot_dat)) {
-  lines(c(plot_dat$lead[i], plot_dat$lead[i]),
-        c(plot_dat$estimate[i] - 1.96 * plot_dat$std.error[i],
-          plot_dat$estimate[i] + 1.96 * plot_dat$std.error[i]))
-}
+abline(h = 0, col = 'gray', lty = 3, lwd = 1.5)
+axis(1, at = plot_dat$lead, labels = paste0("t=", plot_dat$lead), cex.axis = 0.8)
+polygon(
+  c(plot_dat$lead, rev(plot_dat$lead)),
+  c(plot_dat$CI90_UB, rev(plot_dat$CI90_LB)),
+  border = NA, col = rgb(128,128,128, maxColorValue = 255, alpha = 50)
+)
 ```
